tests/object_freeze/object_freeze.exp
Error ---------------------------------------------------------------------------------------------- downstream.js:14:14

Cannot assign `'23456'` to `frozenObject.bar` because property `bar` is not writable. [cannot-write]

   14| frozenObject.bar = '23456'; // error bar is not writable
                    ^^^


Error ----------------------------------------------------------------------------------------------- downstream.js:15:1

Cannot cast `frozenObject` to object type because property `bar` is read-only in frozen object literal [1] but writable
in object type [2]. [incompatible-variance]

   downstream.js:15:1
   15| frozenObject as {bar: '12345'}; // error bar is readonly
       ^^^^^^^^^^^^

References:
   object_freeze.js:11:43
   11| export const frozenObject = Object.freeze({bar: '12345'});
                                                 ^^^^^^^^^^^^^^ [1]
   downstream.js:15:17
   15| frozenObject as {bar: '12345'}; // error bar is readonly
                       ^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- downstream.js:16:1

Cannot cast `frozenObject` to object type because string literal `12345` [1] is incompatible with string literal
`1234` [2] in property `bar`. [incompatible-cast]

   downstream.js:16:1
   16| frozenObject as {+bar: '1234'}; // error '12345' ~> '1234'
       ^^^^^^^^^^^^

References:
   object_freeze.js:11:49
   11| export const frozenObject = Object.freeze({bar: '12345'});
                                                       ^^^^^^^ [1]
   downstream.js:16:24
   16| frozenObject as {+bar: '1234'}; // error '12345' ~> '1234'
                              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- downstream.js:17:1

Cannot cast `frozenObject` to object type because property `baz` is missing in frozen object literal [1] but exists in
object type [2]. [prop-missing]

   downstream.js:17:1
   17| frozenObject as {+bar: '12345', baz: '12345'}; // error baz is missing in frozenObject
       ^^^^^^^^^^^^

References:
   object_freeze.js:11:43
   11| export const frozenObject = Object.freeze({bar: '12345'});
                                                 ^^^^^^^^^^^^^^ [1]
   downstream.js:17:17
   17| frozenObject as {+bar: '12345', baz: '12345'}; // error baz is missing in frozenObject
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- downstream.js:18:1

Incorrect arguments passed to `Object.assign` because property `bar` is not writable. [cannot-write]

   18| Object.assign(frozenObject, {bar: '12345'}); // error bar is not writable
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- downstream.js:20:24

Cannot assign `'23456'` to `frozenObjectWithSpread.bar` because property `bar` is not writable. [cannot-write]

   20| frozenObjectWithSpread.bar = '23456'; // error bar is not writable
                              ^^^


Error ---------------------------------------------------------------------------------------------- downstream.js:21:24

Cannot assign `3456` to `frozenObjectWithSpread.baz` because property `baz` is not writable. [cannot-write]

   21| frozenObjectWithSpread.baz = 3456; // error baz is not writable
                              ^^^


Error ---------------------------------------------------------------------------------------------- downstream.js:22:24

Cannot get `frozenObjectWithSpread.corge` because property `corge` is missing in frozen object literal [1].
[prop-missing]

   downstream.js:22:24
   22| frozenObjectWithSpread.corge; // error corge is missing
                              ^^^^^

References:
   object_freeze.js:12:53
   12| export const frozenObjectWithSpread = Object.freeze({bar: '12345', ...baz});
                                                           ^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- downstream.js:23:38

Cannot resolve name `baz`. [cannot-resolve-name]

   23| frozenObjectWithSpread.constructor = baz; // error baz not a function
                                            ^^^


Error ---------------------------------------------------------------------------------------------- downstream.js:24:24

Cannot assign function to `frozenObjectWithSpread.toString` because property `toString` is missing in frozen object
literal [1]. [prop-missing]

   downstream.js:24:24
   24| frozenObjectWithSpread.toString = function () {}; // error toString missing
                              ^^^^^^^^

References:
   object_freeze.js:12:53
   12| export const frozenObjectWithSpread = Object.freeze({bar: '12345', ...baz});
                                                           ^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- downstream.js:26:1

Cannot cast `frozenObjectWithSpread` to object type because property `bar` is read-only in frozen object literal [1] but
writable in object type [2]. [incompatible-variance]

   downstream.js:26:1
   26| frozenObjectWithSpread as {bar: '12345', baz: number}; // error bar and baz are readonly
       ^^^^^^^^^^^^^^^^^^^^^^

References:
   object_freeze.js:12:53
   12| export const frozenObjectWithSpread = Object.freeze({bar: '12345', ...baz});
                                                           ^^^^^^^^^^^^^^^^^^^^^^ [1]
   downstream.js:26:27
   26| frozenObjectWithSpread as {bar: '12345', baz: number}; // error bar and baz are readonly
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- downstream.js:26:1

Cannot cast `frozenObjectWithSpread` to object type because property `baz` is read-only in frozen object literal [1] but
writable in object type [2]. [incompatible-variance]

   downstream.js:26:1
   26| frozenObjectWithSpread as {bar: '12345', baz: number}; // error bar and baz are readonly
       ^^^^^^^^^^^^^^^^^^^^^^

References:
   object_freeze.js:12:53
   12| export const frozenObjectWithSpread = Object.freeze({bar: '12345', ...baz});
                                                           ^^^^^^^^^^^^^^^^^^^^^^ [1]
   downstream.js:26:27
   26| frozenObjectWithSpread as {bar: '12345', baz: number}; // error bar and baz are readonly
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- downstream.js:27:1

Cannot cast `frozenObjectWithSpread` to object type because string literal `12345` [1] is incompatible with string
literal `1234` [2] in property `bar`. [incompatible-cast]

   downstream.js:27:1
   27| frozenObjectWithSpread as {+bar: '1234', +baz: number}; // error '12345' ~> '1234'
       ^^^^^^^^^^^^^^^^^^^^^^

References:
   object_freeze.js:12:59
   12| export const frozenObjectWithSpread = Object.freeze({bar: '12345', ...baz});
                                                                 ^^^^^^^ [1]
   downstream.js:27:34
   27| frozenObjectWithSpread as {+bar: '1234', +baz: number}; // error '12345' ~> '1234'
                                        ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- downstream.js:28:1

Cannot cast `frozenObjectWithSpread` to object type because property `baz` is missing in object type [1] but exists in
frozen object literal [2]. [prop-missing]

   downstream.js:28:1
   28| frozenObjectWithSpread as {+bar: '12345', }; // error baz is missing in frozenObjectWithSpread
       ^^^^^^^^^^^^^^^^^^^^^^

References:
   downstream.js:28:27
   28| frozenObjectWithSpread as {+bar: '12345', }; // error baz is missing in frozenObjectWithSpread
                                 ^^^^^^^^^^^^^^^^^ [1]
   object_freeze.js:12:53
   12| export const frozenObjectWithSpread = Object.freeze({bar: '12345', ...baz});
                                                           ^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- downstream.js:29:1

Incorrect arguments passed to `Object.assign` because property `bar` is not writable. [cannot-write]

   29| Object.assign(frozenObjectWithSpread, {bar: '12345'}); // error bar is not writable
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- downstream.js:35:1

Cannot cast `frozenInexact` to object type because inexact frozen object literal [1] is incompatible with exact object
type [2]. [incompatible-exact]

   downstream.js:35:1
   35| frozenInexact as {}; // Error: inexact -> exact
       ^^^^^^^^^^^^^

References:
   object_freeze.js:15:44
   15| export const frozenInexact = Object.freeze({...inexact});
                                                  ^^^^^^^^^^^^ [1]
   downstream.js:35:18
   35| frozenInexact as {}; // Error: inexact -> exact
                        ^^ [2]


Error ----------------------------------------------------------------------------------------------- downstream.js:37:1

Cannot cast `frozenNegativeNumber.foo` to number literal `1` because number literal `-1` [1] is incompatible with number
literal `1` [2]. [incompatible-cast]

   downstream.js:37:1
   37| frozenNegativeNumber.foo as 1; // error -1 ~> 1
       ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   object_freeze.js:16:57
   16| export const frozenNegativeNumber = Object.freeze({foo: -1});
                                                               ^^ [1]
   downstream.js:37:29
   37| frozenNegativeNumber.foo as 1; // error -1 ~> 1
                                   ^ [2]


Error ----------------------------------------------------------------------------------------------- downstream.js:39:1

Cannot cast `1` to `typeof frozenNegativeNumber.foo` because number [1] is incompatible with number literal `-1` [2].
[incompatible-cast]

   downstream.js:39:1
   39| 1 as typeof frozenNegativeNumber.foo; // error 1 ~> -1
       ^ [1]

References:
   downstream.js:39:6
   39| 1 as typeof frozenNegativeNumber.foo; // error 1 ~> -1
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- object_freeze.js:13:29

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Cannot
determine the type of this call expression. Please provide an annotation, e.g., by adding a type cast around this
expression. [signature-verification-failure]

   13| export const frozenNumber = Object.freeze(123); // TODO type_sig support
                                   ^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------- object_freeze.js:20:14

Cannot assign `'23456'` to `frozenObject.bar` because property `bar` is not writable. [cannot-write]

   20| frozenObject.bar = '23456'; // error bar is not writable
                    ^^^


Error -------------------------------------------------------------------------------------------- object_freeze.js:21:1

Cannot cast `frozenObject` to object type because property `bar` is read-only in frozen object literal [1] but writable
in object type [2]. [incompatible-variance]

   object_freeze.js:21:1
   21| frozenObject as {bar: '12345'}; // error bar is readonly
       ^^^^^^^^^^^^

References:
   object_freeze.js:11:43
   11| export const frozenObject = Object.freeze({bar: '12345'});
                                                 ^^^^^^^^^^^^^^ [1]
   object_freeze.js:21:17
   21| frozenObject as {bar: '12345'}; // error bar is readonly
                       ^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- object_freeze.js:22:1

Cannot cast `frozenObject` to object type because string literal `12345` [1] is incompatible with string literal
`1234` [2] in property `bar`. [incompatible-cast]

   object_freeze.js:22:1
   22| frozenObject as {+bar: '1234'}; // error '12345' ~> '1234'
       ^^^^^^^^^^^^

References:
   object_freeze.js:11:49
   11| export const frozenObject = Object.freeze({bar: '12345'});
                                                       ^^^^^^^ [1]
   object_freeze.js:22:24
   22| frozenObject as {+bar: '1234'}; // error '12345' ~> '1234'
                              ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- object_freeze.js:23:1

Cannot cast `frozenObject` to object type because property `baz` is missing in frozen object literal [1] but exists in
object type [2]. [prop-missing]

   object_freeze.js:23:1
   23| frozenObject as {+bar: '12345', baz: '12345'}; // error baz is missing in frozenObject
       ^^^^^^^^^^^^

References:
   object_freeze.js:11:43
   11| export const frozenObject = Object.freeze({bar: '12345'});
                                                 ^^^^^^^^^^^^^^ [1]
   object_freeze.js:23:17
   23| frozenObject as {+bar: '12345', baz: '12345'}; // error baz is missing in frozenObject
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- object_freeze.js:24:1

Incorrect arguments passed to `Object.assign` because property `bar` is not writable. [cannot-write]

   24| Object.assign(frozenObject, {bar: '12345'}); // error bar is not writable
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------- object_freeze.js:26:24

Cannot assign `'23456'` to `frozenObjectWithSpread.bar` because property `bar` is not writable. [cannot-write]

   26| frozenObjectWithSpread.bar = '23456'; // error bar is not writable
                              ^^^


Error ------------------------------------------------------------------------------------------- object_freeze.js:27:24

Cannot assign `3456` to `frozenObjectWithSpread.baz` because property `baz` is not writable. [cannot-write]

   27| frozenObjectWithSpread.baz = 3456; // error baz is not writable
                              ^^^


Error ------------------------------------------------------------------------------------------- object_freeze.js:28:24

Cannot get `frozenObjectWithSpread.corge` because property `corge` is missing in frozen object literal [1].
[prop-missing]

   object_freeze.js:28:24
   28| frozenObjectWithSpread.corge; // error corge is missing
                              ^^^^^

References:
   object_freeze.js:12:53
   12| export const frozenObjectWithSpread = Object.freeze({bar: '12345', ...baz});
                                                           ^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------- object_freeze.js:29:38

Cannot assign `baz` to `frozenObjectWithSpread.constructor` because object literal [1] is incompatible with
function [2]. Non-callable objects are not compatible with functions. [incompatible-type]

   object_freeze.js:29:38
   29| frozenObjectWithSpread.constructor = baz; // error baz not a function
                                            ^^^

References:
   object_freeze.js:5:13
    5| const baz = {baz: 12345};
                   ^^^^^^^^^^^^ [1]
   object_freeze.js:29:24
   29| frozenObjectWithSpread.constructor = baz; // error baz not a function
                              ^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- object_freeze.js:30:24

Cannot assign function to `frozenObjectWithSpread.toString` because property `toString` is missing in frozen object
literal [1]. [prop-missing]

   object_freeze.js:30:24
   30| frozenObjectWithSpread.toString = function () {}; // error toString missing
                              ^^^^^^^^

References:
   object_freeze.js:12:53
   12| export const frozenObjectWithSpread = Object.freeze({bar: '12345', ...baz});
                                                           ^^^^^^^^^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------- object_freeze.js:32:1

Cannot cast `frozenObjectWithSpread` to object type because property `bar` is read-only in frozen object literal [1] but
writable in object type [2]. [incompatible-variance]

   object_freeze.js:32:1
   32| frozenObjectWithSpread as {bar: '12345', baz: 12345}; // error bar and baz are readonly
       ^^^^^^^^^^^^^^^^^^^^^^

References:
   object_freeze.js:12:53
   12| export const frozenObjectWithSpread = Object.freeze({bar: '12345', ...baz});
                                                           ^^^^^^^^^^^^^^^^^^^^^^ [1]
   object_freeze.js:32:27
   32| frozenObjectWithSpread as {bar: '12345', baz: 12345}; // error bar and baz are readonly
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- object_freeze.js:32:1

Cannot cast `frozenObjectWithSpread` to object type because property `baz` is read-only in frozen object literal [1] but
writable in object type [2]. [incompatible-variance]

   object_freeze.js:32:1
   32| frozenObjectWithSpread as {bar: '12345', baz: 12345}; // error bar and baz are readonly
       ^^^^^^^^^^^^^^^^^^^^^^

References:
   object_freeze.js:12:53
   12| export const frozenObjectWithSpread = Object.freeze({bar: '12345', ...baz});
                                                           ^^^^^^^^^^^^^^^^^^^^^^ [1]
   object_freeze.js:32:27
   32| frozenObjectWithSpread as {bar: '12345', baz: 12345}; // error bar and baz are readonly
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- object_freeze.js:33:1

Cannot cast `frozenObjectWithSpread` to object type because string literal `12345` [1] is incompatible with string
literal `1234` [2] in property `bar`. [incompatible-cast]

   object_freeze.js:33:1
   33| frozenObjectWithSpread as {+bar: '1234', +baz: 12345}; // error '12345' ~> '1234'
       ^^^^^^^^^^^^^^^^^^^^^^

References:
   object_freeze.js:12:59
   12| export const frozenObjectWithSpread = Object.freeze({bar: '12345', ...baz});
                                                                 ^^^^^^^ [1]
   object_freeze.js:33:34
   33| frozenObjectWithSpread as {+bar: '1234', +baz: 12345}; // error '12345' ~> '1234'
                                        ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- object_freeze.js:34:1

Cannot cast `frozenObjectWithSpread` to object type because property `baz` is missing in object type [1] but exists in
frozen object literal [2]. [prop-missing]

   object_freeze.js:34:1
   34| frozenObjectWithSpread as {+bar: '12345', }; // error baz is missing in frozenObjectWithSpread
       ^^^^^^^^^^^^^^^^^^^^^^

References:
   object_freeze.js:34:27
   34| frozenObjectWithSpread as {+bar: '12345', }; // error baz is missing in frozenObjectWithSpread
                                 ^^^^^^^^^^^^^^^^^ [1]
   object_freeze.js:12:53
   12| export const frozenObjectWithSpread = Object.freeze({bar: '12345', ...baz});
                                                           ^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- object_freeze.js:35:1

Incorrect arguments passed to `Object.assign` because property `bar` is not writable. [cannot-write]

   35| Object.assign(frozenObjectWithSpread, {bar: '12345'}); // error bar is not writable
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- object_freeze.js:41:1

Cannot cast `frozenInexact` to object type because inexact frozen object literal [1] is incompatible with exact object
type [2]. [incompatible-exact]

   object_freeze.js:41:1
   41| frozenInexact as {}; // Error: inexact -> exact
       ^^^^^^^^^^^^^

References:
   object_freeze.js:15:44
   15| export const frozenInexact = Object.freeze({...inexact});
                                                  ^^^^^^^^^^^^ [1]
   object_freeze.js:41:18
   41| frozenInexact as {}; // Error: inexact -> exact
                        ^^ [2]


Error -------------------------------------------------------------------------------------------- object_freeze.js:43:1

Cannot cast `frozenNegativeNumber.foo` to number literal `1` because number literal `-1` [1] is incompatible with number
literal `1` [2]. [incompatible-cast]

   object_freeze.js:43:1
   43| frozenNegativeNumber.foo as 1; // error -1 ~> 1
       ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   object_freeze.js:16:57
   16| export const frozenNegativeNumber = Object.freeze({foo: -1});
                                                               ^^ [1]
   object_freeze.js:43:29
   43| frozenNegativeNumber.foo as 1; // error -1 ~> 1
                                   ^ [2]


Error -------------------------------------------------------------------------------------------- object_freeze.js:45:1

Cannot cast `1` to `typeof frozenNegativeNumber.foo` because number [1] is incompatible with number literal `-1` [2].
[incompatible-cast]

   object_freeze.js:45:1
   45| 1 as typeof frozenNegativeNumber.foo; // error 1 ~> -1
       ^ [1]

References:
   object_freeze.js:45:6
   45| 1 as typeof frozenNegativeNumber.foo; // error 1 ~> -1
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]



Found 37 errors
